--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 /* Your CSS Code here. */
 #btn{
 	border-radius: 5px;
-	background-color: black;
-	color:white;
+	background-color: rgb(0, 0, 0);
+	color:rgb(255, 255, 255);
 }
 #btn:hover{
 	background-color:yellow;
