--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 	border-radius: 5px;
 	background-color: rgb(0, 0, 0);
 	color:rgb(255, 255, 255);
+	border: 0px none;
 }
 #btn:hover{
 	background-color:yellow;
